Add elasticsearch for attendances
