# FinalWork2-Microservices/attendance/src/infrastructure/presentation/swagger.json
@@ -33,6 +33,11 @@
             "name": "userId",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
